--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
     "webpack-dev-server": "^3.3.1"
   },
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server --https --open"
   }
 }
